/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

package dolittle.events.relativity;

import "system/guid.proto";
import "dolittle/interaction/events.relativity/claim.proto";

option csharp_namespace = "Dolittle.Runtime.Grpc.Interaction";

// Represents the original context
message OriginalContext {
    guid application = 1;
    guid boundedContext = 2;
    guid tenant = 3;
    string environment = 4;
    repeated Claim claims = 5;
    uint64 commitInOrigin = 6;
}